# icub_airhockey_control

./: CMakeLists.txt  Dockerfile  ik.ini  ik.toml  main.cpp
include/: controlBoardWrapper.h  icubAirHockeyControlModule.h
src/: controlBoardWrapper.cpp  icubAirHockeyControlModule.cpp
